--- a/index.html
+++ b/index.html
@@ -13,9 +13,46 @@
     body{
         background-color: black;
     }
+    body{
+        background-color: black;
+        color:#ffffff;
+    }
+    body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
 </style>
 </head>
 <body>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="team.html">Team</a>
+      </div>
+      
     <br>
     <br>
     <br>
