--- a/team.html
+++ b/team.html
@@ -88,10 +88,10 @@
       </div>
       <div class="row">
         <div class="column">
-            <a href="https://www.linkedin.com/in/vishrut-grover-b775361b7/"><img src="images/LinkedIn-Logos/LI-In-Bug.png" alt="linkedin" style="height: 10%;"></a>
+            <a href="https://www.linkedin.com/in/vishrut-grover-b775361b7/"><img src="images/Logos/LI-In-Bug.png" alt="linkedin" style="height: 10%;"></a> <a href="https://twitter.com/VishrutGrover"><img src="images/Logos/Twitter social icons - square - blue.png" alt="Twitter" style="height: 10%;"></a> <a href="https://github.com/vishrutgroverhttp://"><img src="images/Logos/GitHub-Mark-Light-64px.png" alt="GitHub"></a>
         </div>
         <div class="column">
-          <a href="www.linkedin.com/in/pranavkethireddy"><img src="images/LinkedIn-Logos/LI-In-Bug.png" alt="linkedin" style="height: 10%;"></a>
+          <a href="www.linkedin.com/in/pranavkethireddy"><img src="images/Logos/LI-In-Bug.png" alt="linkedin" style="height: 10%;"></a> <a href="https://github.com/EpicKidCreations"><img src="images/Logos/GitHub-Mark-Light-64px.png" alt=""></a>
         </div>
       </div>
 </body>
