adeed discord invite

--- a/index.html
+++ b/index.html
@@ -53,22 +53,7 @@
         <a href="team.html">Team</a>
       </div>
       
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <iframe src="https://discord.com/widget?id=796278189504462879&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     <h1>Under Devlopment</h1>
     <h1>Check Back Soon</h1>
     <h1>-Techy team</h1>
